2005-12-18  Chris Burdess  <dog@gnu.org>

	* gnu/xml/stream/SAXParser.java,
	  gnu/xml/stream/XMLParser.java: Various fixes post SAX conformance
	testing.

2005-12-18  Wolfgang Baer  <WBaer@gmx.de>

	* javax/print/attribute/standard/JobOriginatingUserName.java,
	* javax/print/attribute/standard/RequestingUserName.java,
	* javax/print/attribute/standard/JobMessageFromOperator.java,
	* javax/print/attribute/standard/JobName.java,
	* javax/print/attribute/standard/OutputDeviceAssigned.java,
	* javax/print/attribute/standard/PrinterInfo.java,
	* javax/print/attribute/standard/PrinterLocation.java,
	* javax/print/attribute/standard/PrinterMakeAndModel.java,
	* javax/print/attribute/standard/PrinterMessageFromOperator.java,
	* javax/print/attribute/standard/DocumentName.java,
	* javax/print/attribute/standard/PrinterName.java:
	Added and updated javadocs to class and methods.

2005-12-17  Mark Wielaard  <mark@klomp.org>

	* native/fdlibm/Makefile.am (libfdlibm_la_SOURCES): Add namespace.h

2005-12-17  Mark Wielaard  <mark@klomp.org>

	* javax/swing/text/html/HTMLDocument.java (BlockElementgetName):
	Qualify NameAttribute as comming from StyleConstants.
	(RunElement.getName): Likewise.
	(getElement): Check whether grandChild element is null before
	returning it.

2005-12-17  Mark Wielaard  <mark@klomp.org>

	* javax/swing/text/html/HTMLDocument.java (flush): Qualify ElementSpec
	type comming from DefaultStyledDocument.
	(blockOpen): Likewise.
	(blockClose): Likewise.
	(addContent): Likewise.

2005-12-17  Mark Wielaard  <mark@klomp.org>

	* lib/copy-vmresources.sh.in: Use dot '.' for find after changing
	dir to target directory.

2005-12-17  Tom Tromey  <tromey@redhat.com>

	* java/io/File.java (File): Updated javadoc.

2005-12-17  Guilhem Lavaux  <guilhem@kaffe.org>

	* native/fdlibm/namespace.h: Regenerated.

	* native/fdlibm/fdlibm.h
	(isnan): Define explicitly isnan if it is not a macro.

	* scripts/math_symbols: Removed isnan.
	